syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "my-protobuf/protogen/basic";

enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_FEMALE = 1;
  GENDER_MALE = 2;
}

/**
Represent user
 */
message User {
  uint32 id = 1;
  string username = 2;
  bool is_active = 3 [json_name = "is_active"];
  bytes password = 4;

  repeated string email = 16;
  Gender gender = 17;
  Address address = 18;

  google.protobuf.Any communication_channel = 19 [json_name ="communication_channel"];
}

message Address {
  string street = 1;
  string city = 2;
  string country = 3;

  Coordinate coordinate = 16;

  message Coordinate {
    double latitude = 1;
    double longitude = 2;
  }
}

message PaperMail {
  string paper_mail_address = 1 [json_name = "paper_mail_address"];

}

message SocialMedia {
  string social_media_platform = 1 [json_name = "social_media_platform"];
  string social_media_username = 2 [json_name = "social_media_username"];
}

message InstantMessaging {
  string instant_messaging_product = 1 [json_name = "instant_messaging_product"];
  string instant_messaging_username = 2 [json_name = "instant_messaging_username"];
}
